--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,9 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>4.17.0</version>
+      <version>4.18.1</version>
     </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
     <dependency>
@@ -39,7 +40,7 @@
         <version>3.2.5</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>C:\Users\shruti_agarwal1\IdeaProjects\SeleniumTask\src\test\resources\testNG.xml</suiteXmlFile>
+            <suiteXmlFile>src\test\resources\testNG.xml</suiteXmlFile>
           </suiteXmlFiles>
 
           <systemPropertyVariables>
